# OgreBM

./: .gitignore  CMakeLists.txt
assets/ia/: basic_ia.lua
assets/media/lose/materials/overlay/: OgreBMLose.overlay
assets/media/lose/materials/scripts/: OgreBMLose.material
assets/media/materials/scripts/: bloc_stone.material  bloc_wood.material  bomb_black.material  bomb_red.material  fire_ball.material  ressource_bomberman-1.material  ressource_bomberman.material
assets/media/models/: bomb_black.mesh  bomb_red.mesh  bomberman1.mesh  bomberman1.skeleton  bomberman2.mesh  explosion.mesh  stone.mesh  wood.mesh
assets/media/splash/materials/overlay/: OgreBM.overlay
assets/media/splash/materials/scripts/: OgreBM.material
assets/media/win/materials/overlay/: OgreBMWin.overlay
assets/media/win/materials/scripts/: OgreBMWin.material
include/: Application.hpp  Map.hpp  OgreFramework.hpp
include/Entities/: Body.hpp  Bomb.hpp  IA.hpp  Player.hpp
include/Game/: Controller.hpp  Game.hpp  InputController.hpp  InputManager.hpp  Map.hpp
include/States/: AppState.hpp  AppStateManager.hpp  GameState.hpp  LoseState.hpp  MenuState.hpp  OptState.hpp  SplashState.hpp  WinState.hpp
src/: Application.cpp  Main.cpp  Map.cpp  OgreFramework.cpp
src/Entities/: Body.cpp  Bomb.cpp  IA.cpp  Player.cpp
src/Game/: Controller.cpp  Game.cpp  InputController.cpp  InputManager.cpp  Map.cpp
src/States/: AppState.cpp  AppStateManager.cpp  GameState.cpp  LoseState.cpp  MenuState.cpp  OptState.cpp  SplashState.cpp  WinState.cpp
